--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,6 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   The site contains the full code examples that were mentioned in the paper.
   It provides all tests that were conducted so they can be checked and retested.
   It explains certain new topics that where researched for the paper but ended up not fitting inside of the paper due to the ten page size limit.
+  The content discussed on this site originated as part of a bachelor thesis in the School of Information Technology at tUL (School voor Informatietechnologie van de tUL).
 baseurl: "/AComparisonBetweenThreadsFibersAndCoroutines" # the subpath of your site, e.g. /blog
 url: "https://sennebergmans.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  SenneBergmans
@@ -33,9 +34,6 @@ github_username:  SenneBergmans
 theme: minima
 plugins:
   - jekyll-feed
-collections:
-  bachelor_thesis_pages:
-    output: true
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
